src/negative_test_cases/Testcases/no_main_function.stl
void sum()
{

int i;
int j;
int result;

result=i+j;

}
